--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geek's Chile</title>
+    <meta name="description" content="Busqueda Reclutamiento y Contratacion de Profesionales y Talentos TI">
+    <meta name="Contratacion, busqueda, reclutamiento, hunting, TI, fullstack, front end, back end">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -52,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center mt-5">
-                <h1>NUESTROS SERVICIOS</h1>
+                <h1>Nuestros Servicios</h1>
             </div>
         </div>
         <div class="row">
@@ -92,7 +94,7 @@
     <div class="container pt-5">
         <div class="row pt-5">
             <div class="col-md-6 offset-md-3 text-center">
-                <h1>NOSOTROS</h1>
+                <h1>Nosotros</h1>
             </div>
         </div>
         <div class="row">
@@ -125,13 +127,58 @@
         </div>
     </div>
 </section>
+<a name="nosotros"></a>
+<section class="container-fluid pt-5 pb-5 fondoGeneral">
+    <div class="container pt-5">
+        <article class="">
+            <div class="row pt-5">
+                <div class="col-md-6 offset-md-3">
+                    <h1>Noticias</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <p>Noticias de Apple</p>
+                    <p>Ya es oficial: Apple abre las reservas para el Mac Studio, la Studio Display, el iPad Air con chip M1 y el nuevo iPhone SE</p>
+                </div>
+            </div>
+        </article>
+        <aside>
+            <div class="row mt-5 borde">
+                <div class="col-md-3">
+                    <p class="tarjetaHeader">Nuevo Mac Studio</p>
+                    <p class="tarjetaCuerpo">El Mac Studio es un computador de escritorio Mac completamente nuevo que transformará cualquier espacio de trabajo en un estudio profesional.</p>
+                    <a href= "https://www.apple.com/"> Leer </a>
+                </div>
+                <div class="col-md-3">
+                    <p class="tarjeta--Header2">Nuevo Ipad Air</p>
+                    <p class="tarjeta--Cuepo2">El revolucionario chip M1 llegó al iPad Air. La CPU de ocho núcleos tiene un rendimiento hasta un 60% más rápido que la generación anterior. </p>
+                    <a href= "https://www.apple.com/" > Leer </a>
+                </div>
+                <div class="col-md-3">
+                    <p class="tarjetaHeader">Nuevo Iphone SE</p>
+                    <p class="tarjetaCuerpo">El chip A15 Bionic mejora prácticamente todo lo que haces con el iPhone. Las apps se cargan al instante y funcionan con total fluidez.</p>
+                    <a href= "https://www.apple.com/" > Leer </a>
+                </div>
+                <div class="col-md-3">
+                    <p class="tarjeta--Header2">Airtags</p>
+                    <p class="tarjeta--Cuepo2">El AirTag te ayuda a encontrar tus cosas muy fácilmente. Pon uno en tus llaves para que siempre puedas ver su ubicación en la app Encontrar. </p>
+                    <a href= "https://www.apple.com/" > Leer </a>
+
+                </div>
+            </aside>
+        
+        </div>
+    </div>
+</section>
+
 
 <a name="contactanos"></a>
 <section class="container-fluid pt-5 pb-5">
     <div class="container pt-5">
         <div class="row pt-5">
             <div class="col-md-6 offset-md-3 text-center">
-                <h1>CONTACTANOS</h1>
+                <h1>Contáctanos</h1>
             </div>
         </div>
         <div class="row">
