--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geek's Chile</title>
     <meta name="description" content="Busqueda Reclutamiento y Contratacion de Profesionales y Talentos TI">
-    <meta name="Contratacion, busqueda, reclutamiento, hunting, TI, fullstack, front end, back end">
+    <meta name="keywords" content="contratacion, busqueda, reclutamiento, hunting, TI, fullstack, front end, back end">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
