--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="contacto, contratacion, busqueda, reclutamiento, hunting, TI, fullstack, front end, back end">
     <link rel="shortcut icon" href="../img/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -69,11 +72,11 @@
     </nav>
   </div>
 </header>
-<section class="container-fluid fondoInicio pt-5 pb-5">
+<section class="container-fluid fondoPagCont pt-5 pb-5">
     <div class="container pt-5">
         <div class="row pt-5">
             <div class="col-md-6 offset-md-3 text-center">
-                <h1>CONTACTANOS</h1>
+                <h1 class="paleta1">CONTACTANOS</h1>
             </div>
         </div>
         <div class="row">
@@ -118,7 +121,7 @@
                 <p class="m-0">Geek's Chile - Santiago de Chile</p>
             </div>
             <div class="col-md-1 d-flex align-items-center">
-                <img src="../img/linkedin.png" class="img-fluid tamImgFooter"   alt="logo footer">    
+                <a href="https://www.linkedin.com/company/geekschile/"><img src="../img/linkedin.png" class="img-fluid tamImgFooter"   alt="logo footer"></a>
             </div>
         </div>
 </footer>
